--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,26 +4,33 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
-    env:
-      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4096m"
+    #env:
+    #  GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4096m"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: gradle
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Limpar Gradle Cache
-        run: ./gradlew clean
-      - name: Resolver Dependências
-        run: ./gradlew dependencies --configuration debugCompileClasspath --stacktrace --debug --refresh-dependencies
-      - name: Build with Gradle
-        run: ./gradlew build --stacktrace --debug
-      - name: Build Release APK
+
+#      - name: Limpar Gradle Cache
+#        run: ./gradlew clean
+#      - name: Resolver Dependências
+#        run: ./gradlew dependencies --configuration debugCompileClasspath --stacktrace --debug --refresh-dependencies
+
+   #   - name: Build with Gradle
+   #     run: ./gradlew build --stacktrace --debug
+
+      - name: Build Debug APK
         run: ./gradlew assembleDebug --stacktrace
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
