--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: [push, workflow_dispatch]
 jobs:
   build:
     env:
-      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4096m"
+      GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx8g -Dorg.gradle.parallel=true -Dorg.gradle.workers.max=2"  # Aumentado para 8GB e workers limitados para 2
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
