--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
    #     run: ./gradlew build --stacktrace --debug
 
       - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace
+        run: ./gradlew assembleDebug --stacktrace --no-parallel
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
