--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 android.useAndroidX=true
 android.enableJetifier=true
 
-org.gradle.jvmargs=-Xmx6g -XX:+UseParallelGC -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx7g -XX:+UseParallelGC -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 org.gradle.parallel=false
 org.gradle.workers.max=1
+kotlin.daemon.jvmargs=-Xmx3g -XX:+UseParallelGC
