--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
    #     run: ./gradlew build --stacktrace --debug
 
       - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace --no-parallel
+        run: ./gradlew assembleDebug --stacktrace --no-parallel --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
