--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/xml/ns/android"
-    package="com.summarytube">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -9,15 +9,21 @@
         android:theme="@style/Theme.Material3.Dark"
         android:icon="@drawable/ic_launcher"
         android:label="Summary-Tube">
+        android:allowBackup="true"
+        android:supportsRtl="true">
 
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity 
+            android:name=".MainActivity" 
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <receiver android:name=".SummaryWidget" android:exported="true">
+        <receiver 
+            android:name=".SummaryWidget" 
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -26,7 +32,9 @@
                 android:resource="@xml/widget_info" />
         </receiver>
 
-        <service android:name=".OverlayService" android:exported="false" />
+        <service 
+            android:name=".OverlayService" 
+            android:exported="false" />
 
     </application>
 </manifest>
