--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,11 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -37,17 +42,32 @@ android {
 }
 
 dependencies {
+    // Core e UI
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.activity:activity-compose:1.8.2'
     implementation platform('androidx.compose:compose-bom:2023.10.01')
     implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     
-    // Markdown para exibir o resumo bonito
+    // Suporte para Ciclo de Vida em Services (Essencial para o Overlay)
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
+    implementation "androidx.savedstate:savedstate-ktx:1.2.1"
+
+    // Markdown para exibir o resumo formatado
     implementation "com.github.jeziellago:compose-markdown:0.3.1"
     
-    // Networking e Coroutines
+    // Networking (OkHttp) e Processamento de JSON (Gson)
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.google.code.gson:gson:2.10.1" // <--- ADICIONADO: Essencial para OpenAI
+    
+    // Coroutines para tarefas em segundo plano
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+
+    // Testes
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
