--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:theme="@style/Theme.Material3.Dark"
+        android:theme="@style/Theme.Material3.DayNight"
         android:icon="@drawable/ic_launcher"
         android:label="Summary-Tube">
         android:allowBackup="true"
