--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,12 @@ android {
     }
 }
 
+repositories {
+    google()
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     // Core e UI
     implementation 'androidx.core:core-ktx:1.12.0'
