--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,13 @@ pluginManagement {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 rootProject.name = "Summary-Tube"
 include ':app'
