--- a/settings.gradle
+++ b/settings.gradle
@@ -6,12 +6,11 @@ pluginManagement {
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-    }
+//allprojects {
+repositories {
+    google()
+    mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 rootProject.name = "Summary-Tube"
