--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,13 @@ buildscript {
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-    }
-}
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//        maven { url "https://jitpack.io" }
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
