--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,12 @@ android {
 }
 
 repositories {
+    flatDir {
+        dirs 'libs'  // aponta para a pasta app/libs/
+    }
     google()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+    //maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -66,7 +69,7 @@ dependencies {
     implementation "androidx.savedstate:savedstate-ktx:1.2.1"
 
     // Markdown para exibir o resumo formatado
-    implementation "com.github.jeziellago:compose-markdown:0.5.8"
+    //implementation "com.github.jeziellago:compose-markdown:0.5.8"
     
     // Networking (OkHttp) e Processamento de JSON (Gson)
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
@@ -74,6 +77,9 @@ dependencies {
     
     // Coroutines para tarefas em segundo plano
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+
+    // Imports da libs
+    implementation files('libs/compose-markdown-0.5.8.aar')
 
     // Testes
     testImplementation 'junit:junit:4.13.2'
