--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
     // Imports da libs
-    implementation files('libs/compose-markdown-0.5.8.aar')
+    //implementation files('libs/compose-markdown-0.5.8.aar')
+    implementation(name: 'compose-markdown-0.5.8', ext: 'aar')
 
     // Testes
     testImplementation 'junit:junit:4.13.2'
