--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <service 
             android:name=".OverlayService" 
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"  // Se usar accessibility para clipboard
             android:exported="false" />
 
     </application>
